[gd_scene load_steps=10 format=2]

[ext_resource path="res://scene/tittle_screen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://img/player/Cubi&Cuba_logo.png" type="Texture" id=2]
[ext_resource path="res://fonts/Pixel_Countdown_48.tres" type="DynamicFont" id=3]
[ext_resource path="res://scene/tittle_screen/buttons/Play_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/tittle_screen/buttons/OptionsButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/tittle_screen/buttons/TestSceneButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/Pixel_Countdown.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=2]
resource_name = "Fade"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="TitleScreen" type="Control"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -80.0

[node name="Header" type="HBoxContainer" parent="Menu"]
margin_right = 1040.0
margin_bottom = 96.0
size_flags_stretch_ratio = 39.78
custom_constants/separation = 50
alignment = 1

[node name="Logo" type="TextureRect" parent="Menu/Header"]
margin_left = 109.0
margin_right = 205.0
margin_bottom = 96.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Menu/Header"]
margin_left = 255.0
margin_right = 930.0
margin_bottom = 96.0
size_flags_horizontal = 4
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0.223529, 0.6, 0.85098, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Cubes Journey"
align = 1

[node name="CenterRow" type="CenterContainer" parent="Menu"]
margin_top = 100.0
margin_right = 1040.0
margin_bottom = 538.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_left = 220.0
margin_top = 124.0
margin_right = 820.0
margin_bottom = 314.0
custom_constants/separation = 20

[node name="Play_button" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_right = 600.0
margin_bottom = 50.0
rect_scale = Vector2( 1, 1 )

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 70.0
margin_right = 600.0
margin_bottom = 120.0

[node name="TestSceneButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 6 )]
anchor_right = 0.0
margin_top = 140.0
margin_right = 600.0
margin_bottom = 190.0

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_top = 542.0
margin_right = 1040.0
margin_bottom = 560.0

[node name="NameLabel" type="Label" parent="Menu/HBoxContainer"]
margin_right = 518.0
margin_bottom = 18.0
size_flags_horizontal = 11
size_flags_vertical = 13
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.223529, 0.6, 0.85098, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "Johan Guerrero | Marie Diez | Quentin Guerrero"
valign = 1

[node name="VersionLabel" type="Label" parent="Menu/HBoxContainer"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 9
text = "Version 0.0"
align = 2
valign = 1

[node name="FadeIn" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn"]
anims/Fade = SubResource( 2 )
